gallery z-index fix

--- a/src/pages/gallery/components/WSPGallery.scss
+++ b/src/pages/gallery/components/WSPGallery.scss
@@ -7,11 +7,13 @@
   max-width: 90%;
   margin: 0 auto;
   padding-bottom: 2rem;
+  z-index: 8;
 }
 
 .galleryWrap .single {
   width: 200px;
   cursor: pointer;
+  z-index: 8;
 }
 
 .galleryWrap .single img {
@@ -40,36 +42,46 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-}
+  font-size: 2rem;
 
-.sliderWrap .btnClose, .sliderWrap .btnPrev, .sliderWrap .btnNext {
-  position: fixed;
-  cursor: pointer;
-  opacity: 0.6;
-  color: #fff;
-  z-index: 9999;
-}
+  .btnClose, .btnPrev, .btnNext{
+    position: fixed;
+    cursor: pointer;
+    opacity: 0.6;
+    color: #fff;
+    z-index: 9999;
+  }
+  .btnClose{
+    top: 2rem;
+    right: 2rem;
+  }
 
+  .btnPrev{
+    top: 50%;
+    transform: translateY(-50%);
+    left: 2rem;
+  }
+
+  .btnNext{
+    top: 50%;
+    transform: translateY(-50%);
+    right: 2rem;
+  }
+
+}
 .btnNext:hover, .btnPrev:hover, .btnClose:hover {
   opacity: 1;
 }
 
-.sliderWrap .btnClose {
-  top: 40px;
-  right: 40px;
-}
 
-.sliderWrap .btnPrev {
-  top: 50%;
-  transform: translateY(-50%);
-  left: 40px;
-}
 
-.sliderWrap .btnNext {
-  top: 50%;
-  transform: translateY(-50%);
-  right: 40px;
-}
+
+
+
+
+
+
+
 
 .fullScreenImage {
   width: calc(100% - 40px);
@@ -77,13 +89,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  img{
+    max-width: 100%;
+    max-height: 100%;
+    pointer-events: none;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */  
+  }
 }
 
-.fullScreenImage img {
-  max-width: 100%;
-  max-height: 100%;
-  pointer-events: none;
-  -webkit-user-select: none; /* Safari */
-  -ms-user-select: none; /* IE 10 and IE 11 */
-  user-select: none; /* Standard syntax */  
-}
